# nexus-mcp-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
nexusmcp/: __init__.py  inbound_gateway.py  nexus_transport.py  proxy_workflow.py  service.py  service_handler.py  workflow_transport.py
nexusmcp/workflow/: mcp_client.py
tests/: service.py  test_inbound_gateway.py  test_service.py  test_stateful_session.py  test_workflow_caller.py
