[project]
name = "nexus-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "mcp>=1.13.0",
    "nexus-rpc>=1.1.0",
    "pydantic>=2.11.7",
    "temporalio>=1.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "poethepoet>=0.35.0",
    "pyright>=1.1",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
minversion = "8.4.1"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"] # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.poe.tasks]
lint = [
  {cmd = "uv run pyright"},
  {cmd = "uv run mypy --check-untyped-defs ."},
  {cmd = "uv run ruff check --select I"},
  {cmd = "uv run ruff format --check"},
]
format = [
  {cmd = "uv run ruff check --select I --fix"},
  {cmd = "uv run ruff format"},
]
